--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
